# agent-manangement-software

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prod-backend-deploy.yml  test_indexing_integration.py
backend/: .env.example  README.md  pyproject.toml  test_api.py  test_live_image_generation.py  test_live_new_card.py  test_new_card_service.py  test_outbound_call.py
backend/alembic_migrations/versions/: c4e15cf89a7a_.py
backend/api/: basic_search.py
backend/app/: config.py  main.py
backend/app/db/: github_data_service.py
backend/app/models/: __init__.py  models.py
backend/app/routes/: chat.py  docs.py  extract_github.py  interface.py  items.py
backend/app/services/agent/: __init__.py  deep_search_service.py  image_generation_logic.py  new_card_service.py  service.py
backend/app/services/ai/: service.py
backend/app/services/chat/: schema.py  service.py  utils.py
backend/app/services/classifier/: schema.py  service.py
backend/app/services/docs/: service.py
backend/app/services/extract_github/: schema.py  service.py
backend/app/services/github/: __init__.py  schema.py  service.py
backend/app/services/github_repository/: __init__.py  service.py
backend/app/services/indexer/: schema.py  service.py  utils.py
backend/app/services/libraire/: service.py
backend/app/services/llm_service/: schema.py  service.py
backend/app/services/monitor/: langfuse.py
backend/app/services/vapi/: __init__.py  (+2 more)
backend/app/tasks/: indexing.py
backend/tests/routes/: test_items.py
(+96 files in other folders)
